--- a/Medical Cost Insurance.ipynb
+++ b/Medical Cost Insurance.ipynb
@@ -706,7 +706,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -716,6 +716,16 @@
         "\n",
         "with open(Pkl_Filename, 'wb') as file:  \n",
         "    pickle.dump(regressor, file)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "with open(Pkl_Filename, 'rb') as file:  \n",
+        "    rf_tuned_loaded = pickle.load(file)"
       ]
     }
   ],
